[package]
name = "rakh"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/Yush08/Rakh"
description = "A dead simple configuration language."
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
